tdf#155625 a11y: Notify about menu item role change

Send a `AccessibleEventId::ROLE_CHANGED` event
when the accessible role of a menu item changes
(s. how `VCLXAccessibleMenuItem::getAccessibleRole`
takes into account `MenuItemBits::RADIOCHECK` and
`MenuItemBits::CHECKABLE` to determine the accessible
role for the underlying menu entry).

This fixes the issue of obsolete values for roles being
used, which was uncovered by the upcoming
Change-Id I1a047864ce8dc1f1bc3056ad00159f7fd5e5b7d3
("vcl gtk3: Introduce AT-SPI2 tests for the GTK3 accessibility layer").

With this in place, the workaround for tdf#155625 in
the upcoming gtk3/AT-SPI tests is no longer necessary
and `make CppunitTest_vcl_gtk3_a11y` with
https://gerrit.libreoffice.org/c/core/+/153069 patch set 11
still passes after dropping the workaround:

    diff --git a/vcl/qa/cppunit/a11y/atspi2/atspi2.cxx b/vcl/qa/cppunit/a11y/atspi2/atspi2.cxx
    index bbcd263fee0c..762401181bf4 100644
    --- a/vcl/qa/cppunit/a11y/atspi2/atspi2.cxx
    +++ b/vcl/qa/cppunit/a11y/atspi2/atspi2.cxx
    @@ -264,9 +264,6 @@ void Atspi2TestTree::compareObjects(uno::Reference<accessibility::XAccessible> x
          * be represented with a round trip. */
         const auto nLORole = mapToAtspiRole(xLOContext->getAccessibleRole());
         auto nAtspiRole = pAtspiAccessible.getRole();
    -    // FIXME: workaround for https://bugs.documentfoundation.org/show_bug.cgi?id=155625
    -    if (nLORole == ATSPI_ROLE_CHECK_MENU_ITEM && nAtspiRole == ATSPI_ROLE_MENU_ITEM)
    -        nAtspiRole = nLORole;
         CPPUNIT_ASSERT_EQUAL(nLORole, nAtspiRole);
         /* name (no need to worry about debugging suffixes as AccessibilityTools::nameEquals does, as
          * that will also be part of the name sent to ATSPI) */

Change-Id: I0d88a7eda592f5ee9abf368ce1d5feb6611b9971
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154947
Reviewed-by: Colomban Wendling <cwendling@hypra.fr>
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>